added about section

--- a/src/app/SuperadminLayout/superadmin-sidebar/superadmin-sidebar.component.html
+++ b/src/app/SuperadminLayout/superadmin-sidebar/superadmin-sidebar.component.html
@@ -1,9 +1,9 @@
 <!-- ==>Sidebar -->
 <aside class="sidebar" [ngClass]="{ collapsed: isCollapsed }">
   <!-- Logo -->
-  <div class="logo-container" routerLink="/superadmin" *ngFor="let about of abouts">
+  <!-- <div class="logo-container" routerLink="/superadmin" *ngFor="let about of abouts">
         <img [src]="'http://localhost:5000' + about.image" class="img-fluid" />
-  </div>
+  </div> -->
 
   <!-- Sidebar Nav -->
   <nav>
