--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -1,20 +1,20 @@
 <!-- ======= About Section ======= -->
-<section id="about" class="about section-show">
+<section id="about" class="about section-show" *ngFor="let about of aboutData">
 
   <!-- ======= About Me ======= -->
   <div class="about-me container">
-    <i class="fa-solid fa-plus" *ngIf="isLogin" routerLink="/addabout"></i>
+    <i class="fa-solid fa-plus" *ngIf="isLogin" (click)="editAbout(about._id)"></i>
     <div class="section-title">
       <h2>About</h2>
       <p>Learn more about me</p>
     </div>
 
-    <div class="row" *ngFor="let about of aboutData">
+    <div class="row">
       <div class="col-lg-4" data-aos="fade-right">
         <!-- <img [src]="about.image" class="img-fluid" alt="profile image"> -->
         <!-- <img [src]="'https://praveensrivastav-backend.onrender.com' + about.image" class="img-fluid" /> -->
         <img [src]="'http://localhost:5000' + about.image" class="img-fluid" />
-<!-- http://localhost:5000/upload/about/1769252401931.jpeg -->
+        <!-- http://localhost:5000/upload/about/1769252401931.jpeg -->
 
       </div>
       <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
@@ -51,78 +51,29 @@
   </div>
   <!-- End About Me -->
 
-  <!-- ======= Skills ======= -->
+  <!-- ======= Skills (SINGLE CONTAINER) ======= -->
   <div class="skills container">
     <div class="section-title">
       <h2>Web Skills</h2>
     </div>
 
     <div class="row skills-content">
-      <div class="col-lg-6">
-
+      <!-- ✅ Loop INSIDE container, not outside -->
+      <div class="col-lg-6" *ngFor="let webskill of aboutData[0]?.webskills; let i = index">
         <div class="progress">
-          <span class="skill">HTML <i class="val">100%</i></span>
+          <span class="skill">{{webskill.technology}} <i class="val">{{webskill.proficiency}}%</i></span>
           <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
-              data-skill="100">
+            <div class="progress-bar" #progressBar role="progressbar" [attr.aria-valuenow]="webskill.proficiency"
+              attr.aria-valuemin="0" [attr.aria-valuemax]="100" [attr.data-skill]="webskill.proficiency">
             </div>
           </div>
         </div>
-
-        <div class="progress">
-          <span class="skill">CSS <i class="val">90%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-              data-skill="90">
-            </div>
-          </div>
-        </div>
-
-        <div class="progress">
-          <span class="skill">JavaScript <i class="val">85%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
-              data-skill="85">
-            </div>
-          </div>
-        </div>
-
       </div>
 
-      <div class="col-lg-6">
-
-        <div class="progress">
-          <span class="skill">Bootstrap <i class="val">80%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-              data-skill="80">
-            </div>
-          </div>
-        </div>
-
-        <div class="progress">
-          <span class="skill">Tailwind CSS <i class="val">70%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-              data-skill="90">
-            </div>
-          </div>
-        </div>
-
-        <div class="progress">
-          <span class="skill">Jquery<i class="val">70%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-              data-skill="90">
-            </div>
-          </div>
-        </div>
-
-      </div>
     </div>
-
   </div>
   <!-- End Skills -->
+
 
   <!-- ======= prior-skill ======= -->
   <div class="prior-skill container">
@@ -131,148 +82,57 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-3 col-md-4 mt-4">
+      <div class="col-lg-3 col-md-4 mt-4" *ngFor="let skill of getPriorSkills(); let i = index">
         <div class="icon-box">
-          <i class="fa-brands fa-angular" style="color: #e51515;"></i>
-          <h3>Angular</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <i class="fa-brands fa-react" style="color: #1985dd;"></i>
-          <h3>React</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img src="https://assets.vercel.com/image/upload/v1662130559/nextjs/Icon_light_background.png" alt="Next.js"
-            width="33" height="33" />
-          <h3 class="mx-2">Next Js</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <i class="fa-brands fa-wordpress"></i>
-          <h3>Wordpress</h3>
+          <!-- ✅ FontAwesome Icon -->
+          <i *ngIf="skill.iconType === 'fontawesome'" [class]="skill.icon" style=" font-size: 2.5rem;"></i>
+
+          <!-- ✅ Image Icon (Next.js etc.) -->
+          <img *ngIf="skill.iconType === 'image'" [src]="skill.icon" height="40" width="40"
+            alt="{{skill.skillName}} icon" style=" margin-right: 15px;" />
+
+          <h3 class="mt-2">{{skill.skillName}}</h3>
         </div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img class="postman" src="/portfolio/ts.png" style="color: #5578ff;" alt="">
-          <h3>TypeScript</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <i class="fa-brands fa-node" style="color: #09b228;"></i>
-          <h3>Node Js</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <i class="fa-brands fa-php" style="color: #14aae6;"></i>
-          <h3>Php</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <i class="fa-brands fa-laravel" style="color: #b20969;"></i>
-          <h3>Laravel</h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img class="postman" src="/portfolio/mongodb.png" style="color: #09b228;" alt="">
-          <h3>Mongo Db</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/MySQL_logo.svg" alt="MySQL" width="33" height="33" />
-          <h3 class="mx-2">MySQL</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg" alt="PostgreSQL"
-            width="33" height="33" />
-          <h3 class="mx-2">PostgreSQL</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/GraphQL_Logo.svg" alt="GraphQL" width="33"
-            height="33" />
-          <h3 class="mx-2">GraphQL</h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <i class="fa-brands fa-github"></i>
-          <h3>GitHub</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/amazons3.svg" alt="AWS S3" width="33" height="33"
-            style="filter: invert(36%) sepia(92%) saturate(749%) hue-rotate(13deg);" />
-          <h3>AWS S3</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img class="postman" src="/portfolio/postman.png" style="color:  #e63232;">
-          <h3>Postman</h3>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 mt-4">
-        <div class="icon-box">
-          <img class="postman" src="/portfolio/swagger.png" style="background-color: #15f605;">
-          <h3>Swagger</h3>
-        </div>
-      </div>
+    <!-- ✅ Empty state -->
+    <div class="text-center py-4 text-muted" *ngIf="getPriorSkills().length === 0">
+      No prior skills available.
     </div>
   </div>
+  <!-- End prior-skill -->
+
   <!-- End prior-skill -->
 
   <!-- ======= Counts for Company projects ======= -->
   <div class="counts container">
     <div class="row">
-
       <div class="col-lg-3 col-md-6">
         <div class="count-box">
           <i class="fa-regular fa-folder-open"></i>
-          <span class="count-number" data-target="11">0</span>
+          <span class="count-number" data-target="11">{{about?.totalProject}}</span>
           <p>Total Projects</p>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
         <div class="count-box">
-          <span class="count-number" data-target="2">0</span>
+          <span class="count-number" data-target="2">{{about.MeanStack}}</span>
           <p>MEAN STACK</p>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
         <div class="count-box">
-          <span class="count-number" data-target="3">0</span>
+          <span class="count-number" data-target="3">{{about.MernornextStack}}</span>
           <p>MERN STACK / Next JS Stack</p>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
         <div class="count-box">
-          <span class="count-number" data-target="6">0</span>
+          <span class="count-number" data-target="6">{{about.otherproject}}</span>
           <p>Other Projects</p>
         </div>
       </div>
@@ -292,145 +152,33 @@
 
       <div class="swiper-wrapper">
 
-        <div class="swiper-slide">
+        <div class="swiper-slide" *ngFor="let company of getCompanyProjects(); let i = index">
           <div class="projects-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              A React based hospital management platform,with modules like OPD, IPD,
-              Pharmacy,specially made for the Client. <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              {{company.projectDescription}}
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <div class="d-flex">
-              <img class="postman" src="/portfolio/mongodb.png" style="color: #09b228;" alt="">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                height="20" style="background-color: #fff;" />
-              <i class="fa-brands fa-react" style="color: #1985dd;"></i>
-              <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
-              <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/GraphQL_Logo.svg" alt="GraphQL" width="20"
-                height="20" />
+
+            <!-- ✅ FIXED: Loop through technologies ARRAY -->
+            <div class="d-flex flex-wrap gap-2 mb-3">
+              <!-- FontAwesome Icons -->
+              <ng-container *ngFor="let tech of company.technologies">
+                <i *ngIf="tech.iconType === 'fontawesome'" [class]="tech.icon"
+                  style="font-size: 2rem; color: hsl(0, 11%, 95%);" class="me-2"></i>
+
+                <img *ngIf="tech.iconType === 'image'" [src]="tech.icon" height="40" width="40" class="rounded me-2"
+                  alt="{{company.projectTitle}} tech" />
+              </ng-container>
             </div>
-            <h3>HIMS React Based</h3>
-            <h4>A SaaS based Hospital Full Fledged Software with role base Authentication in React</h4>
+
+
+            <h3>{{company.projectTitle}}</h3>
+            <h4>{{company.projectBio}}</h4>
           </div>
         </div>
 
-        <div class="swiper-slide">
-          <div class="projects-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              A powerful SaaS-based hospital management platform, fully customizable with modules like OPD, IPD,
-              Pharmacy, Laboratory, Radiology, and Central Store Inventory—built to support everyone from independent
-              pharmacies to the largest hospital ecosystems. <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <div class="d-flex">
-              <img class="postman" src="/portfolio/mongodb.png" style="color: #09b228;" alt="">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                height="20" style="background-color: #fff;" />
-              <i class="fa-brands fa-angular" style="color:  #e63232;"></i>
-              <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/amazons3.svg" alt="AWS S3" width="15"
-                height="15" style="filter: invert(36%) sepia(92%) saturate(749%) hue-rotate(13deg);" />
-            </div>
-            <h3>HIMS</h3>
-            <h4>A SaaS based Hospital Full Fledged Software with role base Authentication</h4>
-          </div>
-        </div>
 
-        <div class="swiper-slide">
-          <div class="projects-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              A simple Chatbot developed with Wordpress, Js & Php to use as plugins in software or websites where a
-              Chatbot need to be integerated<i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <div class="d-flex">
-              <i class="fa-brands fa-wordpress"></i>
-              <i class="fa-brands fa-php" style="color: #14aae6;"></i>
-              <i class="fa-brands fa-js" style="color: #e3e614;"></i>
-            </div>
-            <h3>Chatbot</h3>
-            <h4>A Wordpress base plugin with Php & Js used for prompt integeration</h4>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="projects-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              A Website focuses on B2B pharmaceutical drugs selling to Hospitals & Pharmacies<i
-                class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <div class="d-flex">
-              <img class="postman" src="/portfolio/mongodb.png" style="color: #09b228;" alt="">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                height="20" style="background-color: #fff;" />
-              <img src="https://assets.vercel.com/image/upload/v1662130559/nextjs/Icon_light_background.png"
-                alt="Next.js" width="20" height="20" />
-              <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
-            </div>
-            <h3>Curigen Pharmaceuticals LLP</h3>
-            <h4>A B2B website for selling Pharmaceutical Drugs</h4>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="projects-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              A Website focuses on the Women Beauty care products with no additive of chemically process products ,
-              providing Anti-allergic & natual skin friendly products.<i
-                class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <div class="d-flex">
-              <img class="postman" src="/portfolio/mongodb.png" style="color: #09b228;" alt="">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                height="20" style="background-color: #fff;" />
-              <img src="https://assets.vercel.com/image/upload/v1662130559/nextjs/Icon_light_background.png"
-                alt="Next.js" width="20" height="20" />
-              <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
-            </div>
-            <h3>Merena</h3>
-            <h4>A B2C website for Beauty Care Products</h4>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="projects-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              A Website focuses on the Women Health Care with combine compassionate, patient-centered care with
-              innovative fertility treatments to help individuals and couples overcome their fertility challenges.<i
-                class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <div class="d-flex">
-              <img class="postman" src="/portfolio/mongodb.png" style="color: #09b228;" alt="">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                height="20" style="background-color: #fff;" />
-              <i class="fa-brands fa-angular" style="color:  #e63232;"></i>
-              <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
-            </div>
-            <h3>Mom's Ivf</h3>
-            <h4>An Angular based software made for Women's Health Care</h4>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="projects-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              An Import Export driven Software solution with AI driven.The AI-Native Platform For
-              Global Trade Orchestration,with moto of :
-              <br> "Trade Simplified. Growth Amplified!". <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <div class="d-flex">
-              <i class="fa-brands fa-laravel" style="color: #b20969;"></i>
-              <i class="fa-brands fa-php" style="color: #14aae6;"></i>
-              <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/MySQL_logo.svg" alt="MySQL" width="30"
-                height="30" />
-            </div>
-            <h3>Trezix</h3>
-            <h4>An AI driven Import- Export Full Fledged Software</h4>
-          </div>
-        </div>
 
       </div>
 
