added url to chekc render ready email

--- a/src/app/SuperadminViews/superadmin-dashboard/superadmin-dashboard.component.html
+++ b/src/app/SuperadminViews/superadmin-dashboard/superadmin-dashboard.component.html
@@ -1,1 +1,14 @@
 <p>superadmin-dashboard works!</p>
+        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+          <div class="info-box">
+           <i class="fa-solid fa-share-nodes"></i>
+            <h3>Social Profiles</h3>
+            <div class="social-links">
+              <a href="https://github.com/praveensrivastav3j" class="github"> <i class="fa-brands fa-github"></i></a>
+              <a href="https://www.instagram.com/_praveensrivastav_/" class="instagram"><i
+                  class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/srivastav-praveen-754846160/" class="fa-brands fa-linkedin"><i
+                  class="bi bi-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
